k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-students-app
  labels:
    app: spring-students-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: spring-students-app
  template:
    metadata:
      labels:
        app: spring-students-app
    spec:
      containers:
        - name: app
          image: 01yura/spring-students:latest
          imagePullPolicy: Always
          # Always - всегда загружать новый образ с Docker Hub, даже если он уже есть локально
          # Это гарантирует, что при деплое будет использоваться последняя версия образа
          ports:
            - containerPort: 8081
              # containerPort: 8081 - порт, на котором Spring Boot приложение слушает внутри контейнера
              # Соответствует server.port=8081 в application.properties
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
